--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <!-- ===============Navigation Header============== -->
-<!-- ============================================== -->
+<!-- ============================================== 
 
 <div class = "nav-bgd">
 	<div class = "nav-float-left">
@@ -30,9 +30,20 @@
 		</ul>
 	</div>
 	
+-->
+
+<div id='cssmenu'>
+<ul>
+   <li class='active'><a href='Mainpage.html'><span>Home</span></a></li>
+    <li><a href='servertest.html'><span>Broadcast</span></a></li>
+   <li><a href='clienttest.html'><span>Chat</span></a></li>
+   <li class='last'><a href='about.html'><span>About</span></a></li>
+</ul>
+</div>
+
 	
-<!--	<h3> Real Time Internet of Things Dashboard <h3>
-<h3> Connecting devices, anywhere, everywhere!</h3> -->
+<h3> Real Time Internet of Things Dashboard <h3>
+<h3> Connecting devices, anywhere, everywhere!</h3> 
 <div class = "container">
 	<div class = "section">
 		<h2><i class="fa fa-globe fa-3x"></i>Device Discovery</h2>
