--- a/index.html
+++ b/index.html
@@ -9,40 +9,20 @@
 <body>
 
 <!-- ===============Navigation Header============== -->
-<!-- ============================================== 
+<!-- ============================================== -->
 
-<div class = "nav-bgd">
-	<div class = "nav-float-left">
-		<ul>
-			<li class = "nav"><a href = "#Real Time Internet of Things Dashboard"> <pre>Real Time Internet of Things Dashboard </pre></a>
-			</li>
-		</ul>
-	</div>
-	
-	<div class = "nav-float-right">
-		<ul>
-			<li class = "nav"><a href = "#Basics"> Basics </a>
-			</li>
-			<li class = "nav"><a href = "#README.md"> README.md</a>
-			</li>
-			<li class = "nav"><a href = "#Github"> GitHub </a>
-			</li>
-		</ul>
-	</div>
-	
--->
 
 <div id='cssmenu'>
 <ul>
-   <li class='active'><a href='Mainpage.html'><span>Home</span></a></li>
-    <li><a href='servertest.html'><span>Broadcast</span></a></li>
-   <li><a href='clienttest.html'><span>Chat</span></a></li>
-   <li class='last'><a href='about.html'><span>About</span></a></li>
+   <li class='active'><a href="#Basics">Basics</a></li>
+
+   <li><a href="#README.md"><span>README.md</span></a></li>
+   <li class='last'><a href="#Github"><span>GitHub</span></a></li>
 </ul>
 </div>
 
 	
-<h3> Real Time Internet of Things Dashboard <h3>
+<h1> Real Time Internet of Things Dashboard <h1>
 <h3> Connecting devices, anywhere, everywhere!</h3> 
 <div class = "container">
 	<div class = "section">
