--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="font-awesome-4.1.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="iot.css">
 </head>
 
@@ -15,30 +16,34 @@
 <div id='cssmenu'>
 <ul>
    <li class='active'><a href="#Basics">Basics</a></li>
-
    <li><a href="#README.md"><span>README.md</span></a></li>
    <li class='last'><a href="#Github"><span>GitHub</span></a></li>
 </ul>
 </div>
 
+
+
+
 	
-<h1> Real Time Internet of Things Dashboard <h1>
+<h1><b> Real Time Internet of Things Dashboard </b> <span class="fa-stack fa-lg">
+  <i class="fa fa-square-o fa-stack-2x"></i>
+  <i class="fa fa-mobile-phone fa-stack-1x"></i>
+</span> </h1>
 <h3> Connecting devices, anywhere, everywhere!</h3> 
+
+
 <div class = "container">
 	<div class = "section">
-		<h2><i class="fa fa-globe fa-3x"></i>Device Discovery</h2>
+		<h3><i class="fa fa-spin fa-globe fa-3x"></i>Device Discovery</h3>
 		<h3 class = "para"><i class= "fa fa-quote-left"> </i>Who's online??<i class= "fa fa-quote-right"> </i></h3>
 		<ul class="fa-ul">
 			<li><i class = "fa fa-li fa-check-square" onclick="alert('pinged')"></i>blah blah </li>
 			<li><i class = "fa fa-li fa-check-square"> </i>blah blah </li>
 			<li><i class = "fa fa-li fa-check-square"> </i>blah blah </li>
-			<li><i class = "fa fa-li fa-check-square"> </i>blah blah </li>
-			<li><i class = "fa fa-li fa-check-square"> </i>blah blah </li>
-			<li><i class = "fa fa-li fa-check-square"> </i>blah blah </li>
 		</ul>
  	</div>
  	<div class = "section">
-		<h2>Lorem ipsum dolor sit amet, cu utamur oblique quo.</h2>
+		<h3>Lorem ipsum dolor sit amet, cu utamur oblique quo.</h3>
 		<p class = "para"> Nam ad diceret appetere efficiendi, 
 		cibo porro usu et, at mea inermis dignissim dissentiet. Aliquid scriptorem in mel. In constituam 
 		definitiones vel. At dictas accumsan quo.
