--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
 
 
 	
-<h1><b> Real Time Internet of Things Dashboard </b> <span class="fa-stack fa-lg">
+<h1><b> Real Time Internet of Things Dashboard </b>  </h1>
+<h2> Connecting devices, anywhere, everywhere!</h2> 
+
+<h1>
+<span class="fa-stack fa-lg">
   <i class="fa fa-square-o fa-stack-2x"></i>
   <i class="fa fa-mobile-phone fa-stack-1x"></i>
-</span> </h1>
-<h3> Connecting devices, anywhere, everywhere!</h3> 
-
+</span>
+</h1>
 
 <div class = "container">
 	<div class = "section">
@@ -56,6 +59,35 @@
  	</div>
 </div>
 
+
+<div class = "ingredients">
+	<h2> The different ingredients involved! <i class ="fa fa-spinner fa-spin"></i> </h2>
+	<p class = "bold">  </p>
+	<div id = 'columns'>
+		<h3 id ='column_head'> Embedded Devices </h3>
+		Pick up your favorite embedded device and start connecting. This can range from a Raspberry Pi to an Arduino board 
+		or a PIC32. You can get a full list of the SDKs supported by PubNub for embedded devices here.
+		<h3 id ='column_head'> CONNECT </h3>
+		Cu regione platonem vix, facilis repudiare eos te. Ad sint debet insolens quo. Semper deleniti mei 
+		cu. Et illum placerat complectitur quo. Latine dolorum assentior mea te, tritani praesent ea eos, 
+		inani possit corrumpit vix an.
+		<h3 id ='column_head'> SEND </h3>
+		Want to get to know me better, come have a sneak peek into what goes on in my head.
+	</div>
+</div>
+
+
+<div class = "features">
+	<h2> Features used  </h2>
+		<div id = 'columns'>
+			<h3 id ='column_head'> PUBLISH <i class = "fa fa-volume-up fa-3x"></i> </h3>
+			Go ahead and find out more about the people in this with you. Find out common interests, issues you care about and maybe, even the food they like. <pre>       </pre>
+			<h3 id ='column_head'> SUBSCRIBE </h3>
+			Found out about a homeless person who needs help? Or maybe you need help distributing food for some people? Shout out loud and let others help.Because the louder you shout, the better people here!<pre>      				 </pre>
+			<h3 id ='column_head'> PRESENCE <i class = "fa fa-users fa-3x"></i></h3>
+			Want to get to know me better, come have a sneak peek into what goes on in my head.
+		</div>
+</div>
 
 </body>
 </html>
