--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
  	</div>
 </div>
 
+<div id="chat"></div>
+
+ <script src ="iot.js"></script> // is this where i need to add this? need to verify once arduino is up and running. 
+
 
 <div class = "ingredients">
 	<h2> The different ingredients involved! <i class ="fa fa-spinner fa-spin"></i> </h2>
